--- a/config/AWS.yml
+++ b/config/AWS.yml
@@ -1,16 +1,16 @@
 # Just like the config/database.yml this file requires an entry for each environment
 # http://aws.amazon.com/security-credentials
 development:
-	access_key_id: AKIAIGCGEKV7NX5VQDGA
-	secret_access_key: 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
-	AWS::Record.domain_prefix = apiara-development-
+  access_key_id: AKIAIGCGEKV7NX5VQDGA
+  secret_access_key: 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
+  AWS::Record.domain_prefix: apiara-development-
 
 test:
-	access_key_id: AKIAIGCGEKV7NX5VQDGA
-	secret_access_key: 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
-	AWS::Record.domain_prefix = apiara-test-
+  access_key_id: AKIAIGCGEKV7NX5VQDGA
+  secret_access_key: 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
+  AWS::Record.domain_prefix: apiara-test-
 
 production:
-	access_key_id: AKIAIGCGEKV7NX5VQDGA
-	secret_access_key: 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
-	AWS::Record.domain_prefix = apiara-production-
+  access_key_id: AKIAIGCGEKV7NX5VQDGA
+  secret_access_key: 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
+  AWS::Record.domain_prefix: apiara-production-
